--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,10 @@ jobs:
           config_display: columns
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Bangkok
+          
           plugin_languages: yes
           plugin_languages_ignored: "css"
           plugin_languages_categories: markup, programming
           plugin_languages_recent_categories: markup, programming
+          
+          plugin_lines: yes
